--- a/compare/action.yml
+++ b/compare/action.yml
@@ -55,12 +55,13 @@ runs:
       run: |
         set -euo pipefail
         if [ "${{ inputs.use-local }}" = "true" ]; then
-          echo "cmd=node ./bin/bundle-analyzer" >> "$GITHUB_OUTPUT"
+          CMD='node ./bin/bundle-analyzer'
         elif [ -n "${{ inputs.version }}" ]; then
-          echo "cmd=npx pull-request-bundle-analyzer@${{ inputs.version }}" >> "$GITHUB_OUTPUT"
+          CMD="npx pull-request-bundle-analyzer@${{ inputs.version }}"
         else
-          echo "cmd=npx pull-request-bundle-analyzer" >> "$GITHUB_OUTPUT"
+          CMD='npx pull-request-bundle-analyzer'
         fi
+        echo "cmd=$CMD" | tee -a "$GITHUB_OUTPUT"
 
     - id: compare
       name: Compare results and set output
