--- a/analyze/action.yml
+++ b/analyze/action.yml
@@ -49,9 +49,8 @@ runs:
         set -euo pipefail
         CONFIG_FILE="${{ inputs.config-file }}"
         OUTPUT_FILE="${{ inputs.output-file }}"
-
         CMD="${{ steps.pick-cmd.outputs.cmd }}"
-        eval "$CMD --config-file \"$CONFIG_FILE\" --output-file \"$OUTPUT_FILE\" --format markdown"
+        eval "$CMD analyze --config-file \"$CONFIG_FILE\" --output-file \"$OUTPUT_FILE\" --format markdown"
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
