refactor: add console parameter

--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "@tsconfig/recommended": "1.0.13",
     "@tsconfig/strictest": "2.0.8",
     "@types/node": "22.19.1",
+    "@types/stream-buffers": "3.0.8",
     "@types/yargs": "17.0.35",
     "@vitest/coverage-v8": "4.0.15",
     "esbuild": "0.27.1",
     "is-ci": "4.1.0",
     "memfs": "4.51.1",
     "npm-pkg-lint": "4.3.1",
+    "stream-buffers": "3.0.3",
     "typescript": "5.9.3",
     "vitest": "4.0.15"
   },
