--- a/analyze/action.yml
+++ b/analyze/action.yml
@@ -1,6 +1,6 @@
-name: "Run pull-request-bundle-analyzer"
+name: "Run artifact-size-analyzer"
 author: David Sveningsson
-description: "Analyze bundle sizes in a pull request using pull-request-bundle-analyzer and upload the result as an artifact."
+description: "Analyze artifact sizes in a pull request using artifact-size-analyzer and upload the result as an artifact."
 
 branding:
   icon: git-pull-request
@@ -8,7 +8,7 @@ branding:
 
 inputs:
   config-file:
-    description: "Path to the bundle configuration file."
+    description: "Path to the artifact configuration file."
     required: true
   artifact-name:
     description: "Name for the uploaded artifact."
@@ -21,7 +21,7 @@ inputs:
     description: "Optional npm package version (e.g. 1.2.3). Default uses the version specified in package.json or latest if not specified."
     required: false
   use-local:
-    description: "When set to 'true', run the local ./bin/bundle-analyzer from the repository instead of using npx. Caller must checkout the repository when using this option."
+    description: "When set to 'true', run the local ./bin/artifact-size-analyzer from the repository instead of using npx. Caller must checkout the repository when using this option."
     required: false
     default: "false"
 
@@ -34,15 +34,15 @@ runs:
       run: |
         set -euo pipefail
         if [ "${{ inputs.use-local }}" = "true" ]; then
-          CMD='node ./bin/bundle-analyzer'
+          CMD='node ./bin/artifact-size-analyzer'
         elif [ -n "${{ inputs.version }}" ]; then
-          CMD="npx pull-request-bundle-analyzer@${{ inputs.version }}"
+          CMD="npx artifact-size-analyzer@${{ inputs.version }}"
         else
-          CMD='npx pull-request-bundle-analyzer'
+          CMD='npx artifact-size-analyzer'
         fi
         echo "cmd=$CMD" | tee -a "$GITHUB_OUTPUT"
 
-    - name: Run pull-request-bundle-analyzer
+    - name: Run artifact-size-analyzer
       id: run
       shell: bash
       run: |
