--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "esbuild": "0.27.1",
     "is-ci": "4.1.0",
     "memfs": "4.51.1",
+    "nano-spawn": "2.0.0",
     "npm-pkg-lint": "4.3.1",
+    "semver": "7.5.4",
     "stream-buffers": "3.0.3",
     "typescript": "5.9.3",
     "vitest": "4.0.15"
